[package]
name = "rustext"
version = "0.1.0"
authors = ["Nnwww <johndororo@gmail.com>"]

[lib]
name = "rustext_lib"
path = "src/lib.rs"

[[bin]]
name = "rustext_bin"
path = "src/main.rs"

[dependencies]
ndarray = { version = "0.10.1", features = ["blas"] }
blas-sys = { version = "0.6.7", default-features = false, features = ["openblas"] }

crossbeam = "0.3.0"